# mcu-test-slint

./: .gitignore  Cargo.toml  DEMO.md  UI_README.md  UPDATE_LOG.md  build.rs  demo.csv  release.bat
src/: chip_detection.rs  config.rs  csv_handler.rs  main.rs  ui_handlers.rs
src/serial/: base.rs  manager.rs  mod.rs  modbus.rs
ui/: address-panel.slint  app-window.slint  connection-panel.slint  file-operation-panel.slint  io-control-panel.slint
ui/globals/: app-state.slint
