[package]
name = "mcu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"

tokio-serial = "5.4.5"
tokio-util = "0.7.15"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serialport = { version = "4.7", default-features = false }

anyhow = "1.0"
thiserror = "2.0"

tokio = { version = "1.0", features = ["full"] }

lazy_static = "1.5.0"

log = "0.4.0"
log4rs = { version = "1.4.0-rc2", default-features = false, features = [
    "config_parsing",
    "console_appender",
    "file_appender",
    "pattern_encoder",
] }

futures-channel = { version = "0.3" }
futures-util = { version = "0.3" }

configparser = "3.1.0"

rfd = "0.15.4"

csv = "1.3"

rand = "0.8"
crc = "3.3"

[build-dependencies]
slint-build = "1.12.1"
